vdpau: don't use the VAAPI backend

And favor our original VAAPI backend.

Fixes #26361